Implemented data download and classifier

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,4 +1,10 @@
 [strava]
-client_id:[your_client_id_here]
-client_secret:[your_client_secret_here]
+client_id:
+client_secret:
 refresh_token:[your_refresh_token_here]
+[strava]
+client_id = [your_client_id_here]
+client_secret = [your_client_secret_here]
+access_token = [your_access_token_here]
+refresh_token = [your_refresh_token_here]
+expires_at = 0
